--- a/Frontend/src/Layout/nav.css
+++ b/Frontend/src/Layout/nav.css
@@ -27,3 +27,19 @@
         transform: translateY(0px);
     }
 }
+body{
+    padding-top: 14rem;
+}
+.navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    transition: height 0.3s ease; /* Smooth height transition */
+    box-shadow: 0px 0px 10px 0px rgb(199, 199, 199);
+    z-index: 1;    
+}
+
+/* Navbar height reduce hone par */
+.navbar.shrink {
+    height: 7rem; /* Chhoti height */
+}
